[gd_scene load_steps=33 format=2]

[ext_resource path="res://sprites/enemies/chocolate bar attack.png" type="Texture" id=1]
[ext_resource path="res://sprites/enemies/chocolate bar idle.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies/chocolate bar chase.png" type="Texture" id=3]
[ext_resource path="res://sprites/test_sprites/redbox.tres" type="Texture" id=4]
[ext_resource path="res://scripts/melee_box.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemies/basic_enemy.gd" type="Script" id=6]
[ext_resource path="res://scripts/shaders/flash.gdshader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 7 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 64, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 64, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 64, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 64, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 64, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 64, 160, 64, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 28, 28 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 28, 0, 28, 28 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 0, 28, 28, 28 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 28, 28, 28, 28 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 28, 28 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 0, 28, 28, 28 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "chase",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=30]
radius = 7.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 8 )

[sub_resource type="Animation" id=6]
resource_name = "melee_attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("MeleeBox/Shape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "attack", "default" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 11 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "splash"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="ChocoBar" type="KinematicBody2D" groups=["enemy"]]
material = SubResource( 8 )
position = Vector2( 576, 64 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 6 )

[node name="Sprite" type="AnimatedSprite" parent="."]
use_parent_material = true
position = Vector2( 0, -3 )
frames = SubResource( 29 )
animation = "attack"
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="ToPlayer" type="RayCast2D" parent="."]

[node name="MeleeBox" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="Shape" type="CollisionShape2D" parent="MeleeBox"]
position = Vector2( 12, 0 )
shape = SubResource( 5 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/melee_attack = SubResource( 6 )

[node name="FlashPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/flash = SubResource( 10 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -20.0
margin_right = -4.0
margin_bottom = -16.0
rect_scale = Vector2( 4, 1 )
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0, 0, 0, 1 )
